Configurar GitHub Pages con index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ function noAceptar(){
 
 function siAcepta(){
     document.getElementById("resultado").innerHTML =
-    "💖 Te amo mi cuchis Alexandra 💖<br>Gracias por aceptar ser mi enamorada 🥰";
+    "💖 Te amo mi Cuchis Besos 💖<br>Gracias por aceptar ser mi enamorada 🥰";
     document.getElementById("fotoAlex").style.display="block";
     document.getElementById("mono").style.display="none";
     lanzarCorazones();
