Actualizar corazones, rosas y monitos automáticos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Para Alexandra 💖</title>
+<title>Para Alexandra Mi Gordis 💖</title>
 
 <style>
 body{
